# Coffee-Roast-Advisor

./: .gitignore  ARTISAN_SETTINGS.md  CLAUDE.md  DATA_HUNT_PROMPT.md  README.md  RESEARCH_PROMPT.md  ROAST_DESIGN_KNOWLEDGE_BRIEF.md  pyproject.toml
.claude/skills/design-roast/: REFERENCE.md  SKILL.md
data/: cohort_labels.json
data/raw/training_data/: 24-03-07_1252.alog  24-03-11_1616.alog  24-09-29_2018-ethiopia decaf.alog  24-10-22_2107.alog  24-11-08_2020.alog  25-07-27_1858.alog  25-09-03_1717.alog  25-11-11_2207.alog  25-11-18_0743.alog  25-11-23_2037.alog  25-11-23_2041.alog  25-11-26_2005.alog  25-11-26_2009.alog  25-11-26_2021.alog  25-11-26_2038.alog  25-12-09_1749.alog  25-12-09_1804.alog  25-12-21_1909.alog  25-12-21_1922.alog  25-12-24_2039.alog  25-12-24_2052.alog  25-12-24_2107.alog  26-01-08_0929.alog  26-01-14_2044.alog  (+41 more)
docs/: PROJECT_BRIEF.md
docs/notes/: 2026-07-13-first-roast-tasting-analysis.md
plans/: city_10min_dtr22_cue_card.txt  city_10min_dtr22_plan.json  city_10min_v2_cue_card.txt  city_10min_v2_plan.json  target_city_10min_v2.json
prototypes/: design_city_target.py  fit_model.py  fit_model2.py  parse_alog.py  profile_designer.py  response_analysis.py  roast_advisor.py
src/roast_advisor/: alog.py  capture.py  cli.py  dataset.py  designer.py  fakemeter.py  ingest.py  live.py  ms6514.py  planner.py  report.py
tests/: test_alog.py  test_ingest.py  test_live.py  test_ms6514.py  test_planner.py  test_report.py
tests/fixtures/: ms6514_capture_20260712_212634.jsonl  ms6514_capture_20260712_213654.jsonl  target_city_10min.json
